welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: value update is not a member of Boolean
		vuBiscuit() = true;
                ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
for (compteur <- 1 to 6)
              ^